src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>QB_OPPORTUNIRTYLINEITEM_TXNLIN__c</fullName>
        <description>The internal ID of the sales order line this opportunity line item is in QuickBooks.</description>
        <inlineHelpText>The internal ID of the sales order line this opportunity line item is in QuickBooks.</inlineHelpText>
        <label>QuickBooks Opportunity Line Item TXN ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickBooks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not the opportunity line has been accepted in QuickBooks.</description>
        <inlineHelpText>Indicates whether or not the opportunity line has been accepted in QuickBooks.</inlineHelpText>
        <label>QB?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_Flag__c</fullName>
        <formula>IF (CONTAINS(PricebookEntry.Product2.Name, &quot;Student&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>TRUE if student product, else FALSE</inlineHelpText>
        <label>Student Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teacher_Flag__c</fullName>
        <formula>IF (CONTAINS(PricebookEntry.Product2.Name, &quot;Teacher&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>TRUE if product name contains &quot;Teacher&quot;, else FALSE.</inlineHelpText>
        <label>Teacher Flag</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Only_noninvoice_opportunities</fullName>
        <active>false</active>
        <description>Opportunity products cannot be changed or added if the opportunity has been invoiced in QuickBooks.</description>
        <errorConditionFormula>Opportunity.Invoice_Count__c &lt;&gt; 0</errorConditionFormula>
        <errorMessage>Opportunity products cannot be changed or added if the opportunity has been invoiced in QuickBooks.</errorMessage>
    </validationRules>
</CustomObject>